# agent

./: .gitignore  0.diff  CONTRIBUTING.md  PROJECT_STATUS.txt  README.md  Start_cmd.bat  Start_main.bat  core_gui.py  git_sinxro.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_assistant.py  status.md  status2.md  test.py  tests.md
.github/workflows/: ci.yml
backup/: ANALYSIS_TODO.md  PROJECT_STATUS.txt  Start_WhisperModel.bat.lnk  WhisperModel_LLM.py  aaa_voice_input_copy.py_бекап роб останній  cuda.py  main.py_бекап  main.py_некоретно працює  main_.py_діп сік  test_lm_studio_load.py  розробка на завтра.txt  тестові питання.txt
becap/: WhisperModel.py  WhisperModel_llm_test.py  aaa_voice_input.py_бекап в буфер копіює  continuous_mode_guide.md  core_cache.py_бекап  main.py_бекап_03_01_26  main.py_клауд  main.py_через віспер  quick_start.md
core_gui/: __init__.py  chat_panel.py  confirmation.py  constants.py  llm_endpoints_editor.py  main_window.py  plan_panel.py  settings_tab.py  styles.py
functions/: aaa_architect.py  aaa_code_tools.py  aaa_confirmation.py  aaa_create_file.py  aaa_debug_code.py  aaa_edit_file.py  aaa_execute_python.py  aaa_help.py  aaa_kill_process_by_name.py_off  aaa_open_browser.py  aaa_open_program.py_old  aaa_programs.py  aaa_system.py  aaa_utility_tools.py  aaa_voice_input.py  agent_memory.json  cache_data.json  conditions_windows.py  config.py  core_action_recorder.py  core_app_profile.py  core_cache.py  core_dispatcher.py  core_executor.py  core_gui_guardian.py  core_macro.py  core_memory.py  core_plan_compiler.py  core_planner.py  core_planner_critic.py  core_planner_runner.py  core_safety_sandbox.py  core_session_budget.py  core_settings.py  core_streaming.py  core_stt_listener.py  core_task_intake.py  core_tool_runtime.py  core_undo_manager.py  core_windsurf_watcher.py  (+34 more)
logs/: audit.jsonl
tests/: conftest.py  test_conditions_windows.py  test_core_app_profile.py  test_core_cache.py  test_core_executor.py  test_core_macro.py  test_core_memory.py  test_core_plan_compiler.py  test_core_planner.py  test_core_planner_critic.py  test_core_planner_runner.py  test_core_session_budget.py  test_core_task_intake.py  test_core_windsurf_watcher.py  test_logic_ai_adapter.py  test_logic_execution_report.py  test_logic_expectations.py  test_logic_llm_tools.py  test_logic_permission_gate.py  test_logic_plan_critic.py  test_logic_provider_registry.py  test_logic_report_generator.py  test_logic_task_runner.py  test_logic_task_runner_expect.py  test_logic_watcher.py  test_pipeline_code.py  test_providers_openai_compatible.py  test_tools_mouse_keyboard.py  test_tools_ocr.py  test_tools_visual_diff.py  test_tools_window_manager.py  test_tools_windsurf.py
